@@ -8,6 +8,7 @@ Broker:
 - Don't disconnect clients immediately on HUP to give chance for all data to
   be read.
 - Reject invalid un/subscriptions e.g. foo/+bar #/bar.
+- Take more care not to disconnect clients that are sending large messages.
 
 Client library:
 - Fix socketpair code on the Mac.
